<resources>
    <string name="app_name">ADF Launcher</string>
    <string name="name">app_name</string>
    <string name="user">USUARIO</string>
    <string name="password">CONTRASEÑA</string>
    <string name="login_Button">ENTRAR</string>
    <string name="form_text">Inserta nueva credencial</string>
    <string name="form_Button">CONFIRMAR</string>
    <string name="admin_Button">.  .  .</string>
    <string name="back_Button">.  .  . </string>
    <string name="configuraciones">Configuraciones</string>
    <string name="pop_menu_add">Añadir App al modo Usuario</string>
    <string name="pop_menu_delete">Quitar App</string>
    <string name="pop_menu_pass">Cambiar Credenciales</string>
    <string name="pop_menu_update">Actualizar App</string>

    <string name="currentVersion_msg">Version Actual  ->  v</string>
    <string name="version_default_txt">0.0.0</string>
    <string name="newestVersion_msg">Version Nueva  ->  v</string>
    <string name="SameVersion_msg">Tienes la version mas reciente</string>
    <string name="update_Button_txt">Actualizar</string>

</resources>